# Communications

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  graph_legend.html  index.html
.github/workflows/: doxygen.yml
include/: communications.hpp
search/: pages_0.js
src/: communications.cpp
